Fix bug causing some HTML message content to be not centered in Elastic skin (#7911)

--- a/skins/elastic/styles/styles.less
+++ b/skins/elastic/styles/styles.less
@@ -336,7 +336,7 @@ body.task-error-login #layout {
 
     div.rcmBody {
         // Remove margins that can be set by the mail message styles
-        margin: 0 !important;
+        margin: 0 auto !important;
     }
 
     blockquote {
